--- a/tokencreation.html
+++ b/tokencreation.html
@@ -80,7 +80,7 @@
                             <md-radio-button value="yes_wallet" ng-disabled="!canGenerateAccount">I want to create a new Ethereum account here in the browser, to import later in any wallet.
                                 <div ng-show="!canGenerateAccount">You are using a browser, which is not safe to generate your Account here, so either switch to Firefox or Chrome or simply install the Ethereum Wallet!</div>
                             </md-radio-button>
-                            <md-radio-button value="exchange" ng-show="account.currencyType=='FIAT'">I will create my Ethereum account later so I can vote and control my DAO tokens' the private keys, for now I would like to store them on an exchange.</md-radio-button>
+                            <md-radio-button value="exchange" ng-show="account.currencyType=='FIAT'">I want to Create and store DAO tokens on an exchange.</md-radio-button>
                         </md-radio-group>
                         <div ng-show="(account.existing=='yes' || account.existing=='yes_wallet') && account.currencyType!='ETH' && account.currencyType!='FIAT'">
                             <md-input-container style="margin-left:10px">
@@ -175,7 +175,7 @@
                                 </p>
                             </div>
                         </div>
-                        <li ng-show="account.currencyType!='ETH' && account.currencyType!='FIAT'">Enter the address of your Ethereum account:
+                        <div ng-show="account.currencyType!='ETH' && account.currencyType!='FIAT'">Enter the address of your Ethereum account:
                             <form name="wallet">
                                 <md-input-container style="margin-left:0px">
                                     <label>Address of your new account</label>
@@ -243,7 +243,7 @@
                         <form name="btcForm" ng-submit="sendBTC($event,account.btc_amount,'btc_qrcode')">
                             <div>
                                 <div class="row">
-                                    <p class="col-md-6">How much BTC would you like to use to Create DAO tokens?</p>
+                                    <p class="col-md-12">How much BTC would you like to use to Create DAO tokens?</p>
                                 </div>
                                 <div class="row">
                                     <md-input-container class="col-md-4">
@@ -369,16 +369,16 @@
                         </p>
                         <p>
                             <ol>
-                                <li><a href="https://bittrex.com/Account/Register" target="_new">Bittrex (Global support, including New York residents)</a><br/> On Bittrex you will have to create a new account or sign in as a returning user before you will be able to Create DAO tokens. You will not own the tokens you Create using this method; they will be held directly on the exchange. In order to truly own DAO tokens and use them to vote or participate in the inner workings of The DAO in any way, you will have to install the <a href="{{mist_link}}" target="_blank">Ethereum Wallet</a> and withdraw your DAO tokens to your Ethereum Wallet account.
+                                <li><a href="https://bittrex.com/Account/Register" target="_new">Bittrex (Global support, including New York residents)</a><br/> On Bittrex you will have to create a new account or sign in as a returning user before you are be able to Create DAO tokens. The DAO Tokens you created will be stored directly on the exchange. In order to use your DAO Tokens to vote or participate in the inner workings of The DAO in any way, you will have to install the <a href="{{mist_link}}" target="_blank">Ethereum Wallet</a> and eventually withdraw your DAO tokens to your Ethereum Wallet account.<br>
                                 </li>
-                                <li><a href="https://gatecoin.com/" target="_new">Gatecoin (Supports some US Residents)</a><br/> On Gatecoin you will have to create a new account or sign in as a returning user before you will be able to Create DAO tokens. You will not own the tokens you Create using this method; they will be held directly on the exchange. In order to truly own DAO tokens and use them to vote or participate in the inner workings of The DAO in any way, you will have to install the <a href="{{mist_link}}" target="_blank">Ethereum Wallet</a> and withdraw your DAO tokens to your Ethereum Wallet account. Gatecoin only supports US residents in Illinois, Kansas, Missouri, New Jersey, Texas, New Mexico, South Carolina, Utah, and Wisconsin.  
+                                <li><a href="https://gatecoin.com/" target="_new">Gatecoin (Supports some US Residents)</a><br/> On Gatecoin you will have to create a new account or sign in as a returning user before you are be able to Create DAO tokens. The DAO Tokens you created will be stored directly on the exchange. In order to use your DAO Tokens to vote or participate in the inner workings of The DAO in any way, you will have to install the <a href="{{mist_link}}" target="_blank">Ethereum Wallet</a> and eventually withdraw your DAO tokens to your Ethereum Wallet account. 
                                 </li>
                             </ol>
                         </p>
                     </div>
                     <div ng-show="account.existing!='exchange'">
                         <p>
-                            In order to create DAO tokens using US dollars, euros, or Swiss francs, please continue to <a href="bity.com" target="_new">Bity.com</a> and just follow these simple steps:
+                            In order to create DAO tokens using US dollars, euros, or Swiss francs, please continue to <a href="https://bity.com" target="_new">Bity.com</a> and follow these steps:
                             <p>
                                 <a href="https://bity.com/" target="_new"><img src="https://bity.com/assets/img/logo-without-circle.png" width="200" /></a>
                             </p>
@@ -387,15 +387,13 @@
                             <ol>
                                 <li>Sign in or create a new Bity account</li>
                                 <li>Open an order for DAO tokens(*) and follow the on-screen instructions.
-                                    <md-tooltip>
-                                        (*) Please note that to convert more than 250 EUR, USD or CHF you will have to verify your identity with Bity. Once logged in, this straightforward process can be found here: <a href="https://bity.com/dashboard/kyc" target="_new">https://bity.com/dashboard/kyc</a>
-                                    </md-tooltip>
                                 </li>
                                 <li>Execute the bank transfer associated to your order to finalize the transaction</li>
                             </ol>
                             <p style="font-size:12px; padding-top:15px">
-                                (*) Please note that to convert more than 250 EUR, USD or CHF you will have to verify your identity with Bity. Once logged in, this straightforward process can be found here: <a href="https://bity.com/dashboard/kyc" target="_new">https://bity.com/dashboard/kyc</a>
+                                (*) Please note that to convert more than 250 EUR, USD or CHF you will have to verify your identity with Bity.
                             </p>
+                             <p><span style="color:red; font-size: 14px;">Note that this page will not update and you will not be notified of the transfer. </span><br/> This is expected as you are sending ETH directly to the DAO contract via an exchange. <br/> <br/> After the exchange has sent the ETH, you will be able to confirm your balance on the <a href="./creation.html" target="_new">Creation page</a>. <br/><a href="voting.html" target="_new">Voting</a> on proposals will become possible at the end of the Creation phase. <br/><br/> You can safely close this page.<br>
                         </p>
                     </div>
                 </md-content>
