--- a/tokencreation.html
+++ b/tokencreation.html
@@ -30,7 +30,7 @@
                 </md-toolbar>
                 <md-content class="md-padding content-border">
                     <p>
-                        Select the currency you want to use to create DAO tokens. The DAO lives on the Ethereum blockchain, for this reason it can only directly accept ETH. Any other currency will be converted to ETH before being sent to the DAO.
+                        Select the currency you want to use to create DAO tokens. We <strong>strongly recommend the use of a direct transfer of ETH</strong>. Note that support is exclusively provided by the community on our <a href="https://forum.daohub.org/c/theDAO/support" target="_new">support forum</a>.
                     </p>
                     <form ng-cloak>
                         <md-radio-group ng-model="account.currencyType">
