--- a/tokencreation.html
+++ b/tokencreation.html
@@ -304,7 +304,7 @@
                                 <div ng-show="account.btc" style="padding-top:10px;margin-top:10px;border-top-style:solid;border-top-color:gray">
                                     <div class="row">
                                         <div class="col-md-6">
-                                            <span style="color:red; font-size: 14px;">This method requires 3 confirmations on the Bitcoin network to complete, and it can take up to 1 hour for a transaction to receive 1 confirmeation.<br/>
+                                            <span style="color:red; font-size: 14px;">This method requires 3 confirmations on the Bitcoin network to complete, it could take more than one hour to complete your purchase.<br/>
 
                                             Please send {{account.btc.amount}} BTC to this address: <b><pre>{{account.btc.adr}}</pre></b><br/><br/> Or simply scan this QRCode with your Bitcoin wallet app.
                                             <div style="margin-top:20px" id="btc_qrcode" />
