--- a/tokencreation.html
+++ b/tokencreation.html
@@ -36,7 +36,7 @@
                         <md-radio-group ng-model="account.currencyType">
                             <md-radio-button value="ETH"><b>ETH</b> (Recommended)
                                 <div class="info">
-                                    Select to use ETH that you already own.
+                                    Select to use ETH that you already own - <a href="https://www.youtube.com/watch?v=CRtBzpTmJ3A" target="_new">Tutorial Video</a>.
                                 </div>
                             </md-radio-button>
                             <md-radio-button value="BTC"><b>BTC</b> (Uses Gatecoin)
