corrected tutorial video link

--- a/tokencreation.html
+++ b/tokencreation.html
@@ -30,13 +30,13 @@
                 </md-toolbar>
                 <md-content class="md-padding content-border">
                     <p>
-                        Select the currency you want to use to create DAO tokens. <strong>We strongly recommend the use of a direct transfer of ETH</strong>.<br/> Note that support is exclusively provided by the community on our <a href="https://forum.daohub.org/c/theDAO/support" target="_new">support forum</a>.
+                        Select the currency you want to use to create DAO tokens. <strong>We strongly recommend the use of a direct transfer of ETH</strong>.<br/> In doubt, please follow the <a href="https://www.youtube.com/watch?v=CRtBzpTmJ3A" target="_new">Tutorial Video</a>. Note that support is exclusively provided by the community on our <a href="https://forum.daohub.org/c/theDAO/support" target="_new">support forum</a>.
                     </p>
                     <form ng-cloak>
                         <md-radio-group ng-model="account.currencyType">
                             <md-radio-button value="ETH"><b>ETH</b> (Recommended)
                                 <div class="info">
-                                    Select to use ETH that you already own - <a href="https://www.youtube.com/watch?v=CRtBzpTmJ3A" target="_new">Tutorial Video</a>.
+                                    Select to use ETH that you already own.
                                 </div>
                             </md-radio-button>
                             <md-radio-button value="BTC"><b>BTC</b> (Uses Gatecoin)
