Removing gatecoin temporarily
Until they fix their ETH wallet server

--- a/tokencreation.html
+++ b/tokencreation.html
@@ -39,11 +39,11 @@
                                     Select to use ETH that you already own.
                                 </div>
                             </md-radio-button>
-                            <md-radio-button value="BTC"><b>BTC</b> (Uses Gatecoin)
-                                <div class="info">
-                                    Select to use BTC via Gatecoin directly on this website.
-                                </div>
-                            </md-radio-button>
+                            <!-- <md-radio-button value="BTC"><b>BTC</b> (Uses Gatecoin)
+                                 <div class="info">
+                                 Select to use BTC via Gatecoin directly on this website.
+                                 </div>
+                                 </md-radio-button> -->
                             <md-radio-button value="COINS"><b>BTC or other digital currencies</b> (Uses ShapeShift)
                                 <div class="info">
                                     Select to use any digital currencies supported by ShapeShift.
